[gd_scene load_steps=20 format=3 uid="uid://j48kbuc5aeum"]

[ext_resource type="Script" path="res://Scripts/time_control.gd" id="1_6fb1j"]
[ext_resource type="Texture2D" uid="uid://dvgnybiq5hyvd" path="res://Sprites/Panels/gray-panel-2px-border.png" id="2_0rf1v"]
[ext_resource type="Texture2D" uid="uid://bsqhd2xh70ole" path="res://Sprites/Buttons/clock-button-normal.png" id="3_3kf5r"]
[ext_resource type="Texture2D" uid="uid://fdfpj2awc2lr" path="res://Sprites/Buttons/clock-button-pressed.png" id="4_ubg5d"]
[ext_resource type="Texture2D" uid="uid://cw2ib1yo6uoj1" path="res://Sprites/Buttons/clock-button-hover.png" id="5_6iinn"]
[ext_resource type="Texture2D" uid="uid://cypiysrgwdpyr" path="res://Sprites/Buttons/clock-button-disabled.png" id="6_fpkb2"]
[ext_resource type="Texture2D" uid="uid://b83tbmwctbxy5" path="res://Sprites/Buttons/clock-button-focus.png" id="7_iul2v"]
[ext_resource type="FontFile" uid="uid://c0dm4ewi5648q" path="res://Fonts/press_start_2p/PressStart2P.ttf" id="8_42d2q"]
[ext_resource type="Script" path="res://Scripts/key_focus_component.gd" id="8_u5rks"]
[ext_resource type="Texture2D" uid="uid://cw5cgymy7oclv" path="res://Sprites/Buttons/time-subtract-button-normal.png" id="8_ykv2u"]
[ext_resource type="Texture2D" uid="uid://jmsovgotpssy" path="res://Sprites/Buttons/time-subtract-button-pressed.png" id="9_8bfpu"]
[ext_resource type="Texture2D" uid="uid://bn5dt0stxdwti" path="res://Sprites/Buttons/time-subtract-button-hover.png" id="10_yk32h"]
[ext_resource type="Texture2D" uid="uid://c5dyj6typoo01" path="res://Sprites/Buttons/time-subtract-button-disabled.png" id="11_62xaa"]
[ext_resource type="Texture2D" uid="uid://chv7rs2abbgak" path="res://Sprites/Buttons/time-subtract-button-focus.png" id="12_m25io"]
[ext_resource type="Texture2D" uid="uid://c606tlo051v8k" path="res://Sprites/Buttons/time-add-button-normal.png" id="13_3buj1"]
[ext_resource type="Texture2D" uid="uid://b6on7h3c51n8d" path="res://Sprites/Buttons/time-add-button-pressed.png" id="14_7gger"]
[ext_resource type="Texture2D" uid="uid://dxb6m2fsbiquw" path="res://Sprites/Buttons/time-add-button-hover.png" id="15_oyd2v"]
[ext_resource type="Texture2D" uid="uid://b0v60n4qau5ek" path="res://Sprites/Buttons/time-add-button-disabled.png" id="16_em3f6"]
[ext_resource type="Texture2D" uid="uid://b73udptx3mded" path="res://Sprites/Buttons/time-add-button-focus.png" id="17_i77lj"]

[node name="TimeControl" type="MarginContainer"]
offset_left = 290.0
offset_top = 12.0
offset_right = 395.0
offset_bottom = 40.0
mouse_filter = 0
script = ExtResource("1_6fb1j")

[node name="Background" type="NinePatchRect" parent="."]
layout_mode = 2
texture = ExtResource("2_0rf1v")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="InnerMargin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="InnerBox" type="HBoxContainer" parent="InnerMargin"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HalveButton" type="TextureButton" parent="InnerMargin/InnerBox"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_right = NodePath("../DoubleButton")
disabled = true
texture_normal = ExtResource("8_ykv2u")
texture_pressed = ExtResource("9_8bfpu")
texture_hover = ExtResource("10_yk32h")
texture_disabled = ExtResource("11_62xaa")
texture_focused = ExtResource("12_m25io")
stretch_mode = 3

[node name="KeyFocusComponent" type="Node" parent="InnerMargin/InnerBox/HalveButton"]
script = ExtResource("8_u5rks")

[node name="DurationLabel" type="Label" parent="InnerMargin/InnerBox"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.87451, 0.878431, 0.886275, 1)
theme_override_fonts/font = ExtResource("8_42d2q")
theme_override_font_sizes/font_size = 8
text = "2048"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DoubleButton" type="TextureButton" parent="InnerMargin/InnerBox"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../HalveButton")
focus_neighbor_right = NodePath("../TimeskipButton")
texture_normal = ExtResource("13_3buj1")
texture_pressed = ExtResource("14_7gger")
texture_hover = ExtResource("15_oyd2v")
texture_disabled = ExtResource("16_em3f6")
texture_focused = ExtResource("17_i77lj")
stretch_mode = 3

[node name="KeyFocusComponent" type="Node" parent="InnerMargin/InnerBox/DoubleButton"]
script = ExtResource("8_u5rks")

[node name="TimeskipButton" type="TextureButton" parent="InnerMargin/InnerBox"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../DoubleButton")
texture_normal = ExtResource("3_3kf5r")
texture_pressed = ExtResource("4_ubg5d")
texture_hover = ExtResource("5_6iinn")
texture_disabled = ExtResource("6_fpkb2")
texture_focused = ExtResource("7_iul2v")
stretch_mode = 3

[node name="KeyFocusComponent" type="Node" parent="InnerMargin/InnerBox/TimeskipButton"]
script = ExtResource("8_u5rks")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="InnerMargin/InnerBox/HalveButton" to="." method="_on_halve_button_pressed"]
[connection signal="pressed" from="InnerMargin/InnerBox/DoubleButton" to="." method="_on_double_button_pressed"]
[connection signal="pressed" from="InnerMargin/InnerBox/TimeskipButton" to="." method="_on_timeskip_button_pressed"]
